samples/_failures_safe/1761476316_32b8b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dfcdaff.c: In function ‘main’:
./samples/SAFE/__tmp_0dfcdaff.c:168:5: error: expected declaration or statement at end of input
  168 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_0dfcdaff.c:168:5: error: expected declaration or statement at end of input
